chore: msg list and add updated swagger endpoints
