# churchApp/src/app/services/openapi.json
@@ -12,15 +12,15 @@
             "url": "https://www.linkedin.com/in/sabrinaojeachapelet/"
         }
     },
+    "externalDocs": {
+        "description": "OpenAPI definition",
+        "url": "http://localhost:3000/api/docs.json"
+    },
     "servers": [
         {
             "url": "https://sabriojea-mychurch-api.k8s.arsahosting.net"
         }
     ],
-    "externalDocs": {
-        "description": "OpenAPI definition",
-        "url": "http://localhost:3000/api/docs.json"
-    },
     "paths": {
         "/audioFiles": {
             "get": {
@@ -57,6 +57,7 @@
                         }
                     }
                 ],
+                "operationId": "getAudio",
                 "responses": {
                     "200": {
                         "description": "Audio downloaded",
@@ -98,6 +99,7 @@
                 "tags": [
                     "Book"
                 ],
+                "operationId": "getAllBooks",
                 "responses": {
                     "200": {
                         "content": {
@@ -135,6 +137,7 @@
                 "tags": [
                     "Message"
                 ],
+                "operationId": "getAllMessages",
                 "responses": {
                     "200": {
                         "content": {
@@ -180,6 +183,7 @@
                         }
                     }
                 },
+                "operationId": "addMessage",
                 "responses": {
                     "200": {
                         "description": "New message added",
@@ -219,11 +223,12 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/NewMessage"
+                                "$ref": "#/components/schemas/Message"
                             }
                         }
                     }
                 },
+                "operationId": "updateMessage",
                 "responses": {
                     "200": {
                         "description": "Message update",
@@ -274,6 +279,7 @@
                         }
                     }
                 },
+                "operationId": "deleteMessage",
                 "responses": {
                     "200": {
                         "description": "Message deleted",
@@ -321,9 +327,10 @@
                         }
                     }
                 ],
+                "operationId": "findByTitle",
                 "responses": {
                     "200": {
-                        "description": "Messages filtered",
+                        "description": "Messages filtered by title",
                         "content": {
                             "application/json": {
                                 "properties": {
@@ -410,6 +417,7 @@
                         }
                     }
                 ],
+                "operationId": "findByFilter",
                 "responses": {
                     "200": {
                         "description": "Messages filtered",
@@ -470,6 +478,7 @@
                 "tags": [
                     "MessageTypes"
                 ],
+                "operationId": "getMessageTypes",
                 "responses": {
                     "200": {
                         "description": "A list of message types",
@@ -518,6 +527,7 @@
                 "tags": [
                     "Speaker"
                 ],
+                "operationId": "getAllSpeakers",
                 "responses": {
                     "200": {
                         "description": "A list of speakers",
@@ -668,11 +678,11 @@
             "NewMessage": {
                 "type": "object",
                 "properties": {
-                    "id_speaker": {
+                    "idSpeaker": {
                         "type": "number",
                         "example": 1
                     },
-                    "id_book": {
+                    "idBook": {
                         "type": "number",
                         "example": 1
                     },
@@ -680,7 +690,7 @@
                         "type": "string",
                         "example": "Este es el título"
                     },
-                    "normalized_title": {
+                    "normalizedTitle": {
                         "type": "string",
                         "example": "este es el titulo"
                     },
@@ -696,7 +706,7 @@
                         "type": "string",
                         "example": "Nota con nombre invitado"
                     },
-                    "id_message_type": {
+                    "idMessageType": {
                         "type": "number",
                         "example": 1
                     },
@@ -714,13 +724,13 @@
                     }
                 },
                 "required": [
-                    "id_speaker",
-                    "id_book",
+                    "idSpeaker",
+                    "idBook",
                     "title",
-                    "normalized_title",
+                    "normalizedTitle",
                     "url",
                     "date",
-                    "id_message_type",
+                    "idMessageType",
                     "title"
                 ]
             }
